--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -49,3 +49,6 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
+<h1>@Localizer["WelcomeMessage"]</h1>
+<p>@Localizer["Description"]</p>
