--- a/Views/Lecturers/Index.cshtml
+++ b/Views/Lecturers/Index.cshtml
@@ -1,52 +1,47 @@
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @model IEnumerable<SchoolManagementApp.MVC.Data.Lecturer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = Localizer["LecturersTitle"];
 }
 
-<h1>Lecturers</h1>
+<h1>@Localizer["LecturersHeading"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Create New</a>
+    <a asp-action="Create" class="btn btn-success">@Localizer["CreateNewLecturer"]</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th> 
-                @Html.DisplayNameFor(model => model.FirstName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
+            <th>@Localizer["FirstName"]</th>
+            <th>@Localizer["LastName"]</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model) {
         <tr>
+            <td>@item.FirstName</td>
+            <td>@item.LastName</td>
             <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">Delete</button>
+                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">@Localizer["Edit"]</a>
+                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">@Localizer["Details"]</a>
+                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">@Localizer["Delete"]</button>
             </td>
         </tr>
-}
+        }
     </tbody>
 </table>
 
 <form asp-action="Delete" id="lecturerDeleteForm">
-    <input type="hidden" id="lecturerid" name="Id"/>
+    <input type="hidden" id="lecturerid" name="Id" />
 </form>
 
-@section Scripts{
+@section Scripts {
     <script>
-        $(function(){
+        $(function () {
             $('.table').DataTable();
 
             @if (TempData["SwalMessage"] != null)
@@ -70,11 +65,6 @@
                     confirmButtonText: 'Yes, delete it!'
                     }).then((result) => {
                         if (result.isConfirmed) {
-                            // Swal.fire(
-                            // 'Deleted!',
-                            // 'Your file has been deleted.',
-                            // 'success'
-                            // );
                             var btn = $(this);
                             var id = btn.data("id");
                             $('#lecturerid').val(id);
