--- a/Views/Classes/Index.cshtml
+++ b/Views/Classes/Index.cshtml
@@ -1,31 +1,37 @@
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @model IEnumerable<SchoolManagementApp.MVC.Data.Class>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = Localizer["ClassesTitle"];
 }
 
-<h1>Classes</h1>
+<h1>@Localizer["ClassesHeading"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Create New</a>
+    <a asp-action="Create" class="btn btn-success">@Localizer["CreateNewClass"]</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Course)
+                Id
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Lecturer)
+                @Localizer["Course"]
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.StartDate)
+                @Localizer["Lecturer"]
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.EndDate)
+                @Localizer["StartDate"]
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Time)
+                @Localizer["EndDate"]
+            </th>
+            <th>
+                @Localizer["Time"]
             </th>
             <th></th>
         </tr>
@@ -34,6 +40,9 @@
         @foreach (var item in Model)
         {
             <tr>
+                <td>
+                    @item.Id
+                </td>
                 <td>
                     @item.Course.Code - @item.Course.Name
                     <span class="badge @GetStatusClass(item.Status)">
@@ -55,16 +64,16 @@
                 <td>
                     @if (item.Status == "Started" || item.Status == "Created")
                     {
-                        <a asp-action="ManageEnrollments" class="btn btn-success" asp-route-classId="@item.Id">Enrollments</a>
+                        <a asp-action="ManageEnrollments" class="btn btn-success" asp-route-classId="@item.Id">@Localizer["Enrollments"]</a>
                     }
                     @if (item.Status != "Cancelled")
                     {
-                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">@Localizer["Edit"]</a>
                     }
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">@Localizer["Details"]</a>
                     @if (item.Status == "Cancelled" || item.Status == "Ended")
                     {
-                        <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">Delete</button>
+                        <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">@Localizer["Delete"]</button>
                     }
                 </td>
             </tr>
