--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -1,45 +1,36 @@
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @model IEnumerable<SchoolManagementApp.MVC.Data.Course>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = Localizer["CoursesTitle"];
 }
 
-<h1>Courses</h1>
+<h1>@Localizer["CoursesHeading"]</h1>
 
 <p>
-    <a asp-action="Create" class="btn btn-success">Create New</a>
+    <a asp-action="Create" class="btn btn-success">@Localizer["CreateNewCourse"]</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Code)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Credits)
-            </th>
+            <th>@Localizer["CourseName"]</th>
+            <th>@Localizer["CourseCode"]</th>
+            <th>@Localizer["Credits"]</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model) {
         <tr>
+            <td>@item.Name</td>
+            <td>@item.Code</td>
+            <td>@item.Credits</td>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Code)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Credits)
-            </td>
-            <td>
-                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">Details</a> 
-                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">Delete</button>
+                <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">@Localizer["Edit"]</a> 
+                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id">@Localizer["Details"]</a> 
+                <button data-id="@item.Id" class="btn btn-danger deleteBtn" type="button">@Localizer["Delete"]</button>
             </td>
         </tr>
 }
