--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -78,12 +78,12 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="languageDropdown">
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Home" asp-action="SetLanguage" asp-route-culture="en-US">
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="SetLanguage" asp-route-culture="en-US" asp-route-returnUrl="@(Context.Request.Path + @Context.Request.QueryString)">
                                         <img src="~/images/flags/en.png" alt="@Localizer["English"]" width="24" height="16" /> @Localizer["English"]
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Home" asp-action="SetLanguage" asp-route-culture="vi-VN">
+                                    <a class="dropdown-item" asp-controller="Home" asp-action="SetLanguage" asp-route-culture="vi-VN" asp-route-returnUrl="@(Context.Request.Path + @Context.Request.QueryString)">
                                         <img src="~/images/flags/vi.png" alt="@Localizer["Vietnamese"]" width="24" height="16" /> @Localizer["Vietnamese"]
                                     </a>
                                 </li>
