--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@using Microsoft.AspNetCore.Localization
+﻿    @using Microsoft.AspNetCore.Localization
 @using System.Globalization
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
@@ -29,7 +29,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["ProjectName"]</a>
+                @* <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["ProjectName"]</a> *@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="@Localizer["ToggleNavigation"]">
                     <span class="navbar-toggler-icon"></span>
@@ -44,6 +44,10 @@
                         <li class="nav-item">
                             <a class="nav-link button-style @(ViewContext.RouteData.Values["action"]?.ToString() == "About" && ViewContext.RouteData.Values["controller"]?.ToString() == "Home" ? "active" : "")"
                                asp-area="" asp-controller="Home" asp-action="About">@Localizer["About"]</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link button-style @(ViewContext.RouteData.Values["action"]?.ToString() == "Dashboard" ? "active" : "")"
+                               asp-area="" asp-controller="Home" asp-action="Dashboard">Dashboard</a>
                         </li>
 
                         @if (User.Identity.IsAuthenticated)
