--- a/Views/Classes/Index.cshtml
+++ b/Views/Classes/Index.cshtml
@@ -73,7 +73,7 @@
                     <a class="btn btn-primary mb-1" asp-action="Details" asp-route-id="@item.Id">@Localizer["Details"]</a>
                     @if (item.Status == "Cancelled" || item.Status == "Ended")
                     {
-                        <button data-id="@item.Id" class="btn btn-danger deleteBtn mb-1" type="button">@Localizer["Delete"]</button>
+                        <button data-id="@item.Id" onclick="onDelete(@item.Id)" class="btn btn-danger deleteBtn mb-1" type="button">@Localizer["Delete"]</button>
                     }
                 </td>
             </tr>
@@ -126,6 +126,28 @@
                     })
             })
         })
+
+        function onDelete( id ){
+            Swal.fire({
+                    title: 'Are you sure?',
+                    text: "You won't be able to revert this!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Yes, delete it!'
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            // Swal.fire(
+                            // 'Deleted!',
+                            // 'Your file has been deleted.',
+                            // 'success'
+                            // );
+                            $('#classid').val(id);
+                            $('#classDeleteForm').submit();
+                        }
+                    })
+        }
     </script>
 }
 
